--- a/trunk/codigo/SIDAF/SIDAF.UI.MATRIZ/SIDAF.UI.MATRIZ.csproj
+++ b/trunk/codigo/SIDAF/SIDAF.UI.MATRIZ/SIDAF.UI.MATRIZ.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C58784BF-D5C5-4041-B43C-DDE605B0284B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -59,10 +59,29 @@
     <Compile Include="frmPrincipal.Designer.cs">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Gerencia\frmbuscarFuncionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gerencia\frmbuscarFuncionario.Designer.cs">
+      <DependentUpon>frmbuscarFuncionario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Gerencia\frmNovoFuncionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gerencia\frmNovoFuncionario.Designer.cs">
+      <DependentUpon>frmNovoFuncionario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gerencia\frmbuscarFuncionario.resx">
+      <DependentUpon>frmbuscarFuncionario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gerencia\frmNovoFuncionario.resx">
+      <DependentUpon>frmNovoFuncionario.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
